# kai

./: .gitignore  CMakeLists.txt  KAI.md  LICENSE  README.md  index.html  install.sh  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
benchmarks/: memory.sh  startup.sh
e2e/: app.spec.ts
resources/: kai.service
src/: KAIController.cpp  KAIController.h  api.js  main.cpp  main.js  main.ts  resources.qrc  settings.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc_server.rs  lib.rs  main.rs  window.rs
src-tauri/src/commands/: capture.rs  chat.rs  history.rs  mod.rs  models.rs  settings.rs
src-tauri/src/models/: config.rs
src/__tests__/services/: markdown.test.ts
src/__tests__/stores/: createStore.test.ts
src/__tests__/types/: attachments.test.ts
src/__tests__/utils/: format.test.ts
src/api/: OpenAIClient.cpp  OpenAIClient.h
src/components/: App.ts  AttachmentBar.ts  ChatPanel.js  ChatView.ts  Header.ts  HistoryPanel.ts  InputBar.js  InputBar.ts  MessageBubble.js  MessageBubble.ts  ModelSelector.ts  SettingsPanel.js  SettingsPanel.ts  ThemeToggle.js  ThemeToggle.ts
src/config/: Settings.cpp  Settings.h
src/hooks/: useAutoResize.ts  useDragDrop.ts  useKeyboard.ts
src/ipc/: capture.ts  chat.ts  history.ts  models.ts  settings.ts
src/services/: ai.js  chats.js  markdown.ts  settings.js
src/stores/: attachmentStore.ts  chatStore.ts  createStore.ts  historyStore.ts  settingsStore.ts  windowStore.ts
src/styles/: index.css
src/types/: attachments.ts  chat.ts  settings.ts  window.ts
src/ui/: Overlay.qml  SettingsView.qml  markdown.js
src/utils/: dom.ts  env.ts  format.ts  markdown.js  theme.js  theme.ts
