[package]
name = "kai-overlay"
version = "1.0.0"
description = "KAI KDE AI Overlay Desktop Assistant"
authors = ["William <typedbywill>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-opener = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
