[package]
name = "kai-overlay"
version = "1.0.0"
description = "KAI - Fast Desktop AI Helper Overlay"
authors = ["William"]
edition = "2021"

[lib]
name = "kai_overlay_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
